--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,30 @@
   </div>
     <div class="ui-g">
       <div class="ui-g-12">
-        <!-- <p-Table [value]="">
+        <p-table [value]="lancamentos">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Pessoa</th>
+              <th>Descrição</th>
+              <th class="col-data-header">Vencimento</th>
+              <th class="col-data-header">Pagamento</th>
+              <th class="col-valor-header">valor</th>
+            </tr>
 
-          </p-Table>-->
+          </ng-template>
+          <ng-template pTemplate="body" let-lancamento>
+            <tr>
+              <td>{{lancamento.pessoa}}</td>
+              <td>{{lancamento.descricao}}</td>
+              <td class="col-data-content">{{lancamento.dataVencimento}}</td>
+              <td class="col-data-content">{{lancamento.dataPagamento}}</td>
+              <td class="col-valor-content">{{lancamento.valor}}</td>
+            </tr>
+
+          </ng-template>
+
+
+        </p-table>
       </div>
     </div>
 </div>
