--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,18 @@ label{
     width:  1170px;
     margin: 0 auto;
   }
+.col-valor-header{
+  width: 120px;
+}
+.col-valor-content {
+  text-align:  right;
+}
+.col-data-header {
+  width: 120px;
 
-
+}
+.col-data-content{
+  text-align: center;
+}
 }
 
