--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,9 @@
               <th>Descrição</th>
               <th class="col-data-header">Vencimento</th>
               <th class="col-data-header">Pagamento</th>
+              <th>Tipo</th>
               <th class="col-valor-header">valor</th>
+              <th></th>
             </tr>
 
           </ng-template>
@@ -39,13 +41,18 @@
               <td>{{lancamento.descricao}}</td>
               <td class="col-data-content">{{lancamento.dataVencimento}}</td>
               <td class="col-data-content">{{lancamento.dataPagamento}}</td>
-              <td class="col-valor-content">{{lancamento.valor}}</td>
+              <td class="col-data-content">{{lancamento.tipo}}</td>
+              <td class="col-valor-content" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}}</td>
+              <td class="col-acoes">
+                  <a pButton icon="pi pi-pencil" style="margin: 1px"></a>
+                  <button pButton icon="pi pi-trash"></button>
+              </td>
             </tr>
-
           </ng-template>
-
-
         </p-table>
+        <div class="ui-g-12">
+          <a pButton label="Novo Lançamento"></a>
+        </div>
       </div>
     </div>
 </div>
