--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   </div>
     <div class="ui-g">
       <div class="ui-g-12">
-        <p-table [value]="lancamentos">
+        <p-table [value]="lancamentos" [paginator] =true [rows]=5 [responsive]="true">
           <ng-template pTemplate="header">
             <tr>
               <th>Pessoa</th>
@@ -44,8 +44,9 @@
               <td class="col-data-content">{{lancamento.tipo}}</td>
               <td class="col-valor-content" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}}</td>
               <td class="col-acoes">
-                  <a pButton icon="pi pi-pencil" style="margin: 1px"></a>
-                  <button pButton icon="pi pi-trash"></button>
+                  <a pButton icon="pi pi-pencil" style="margin: 1px"
+                  pTooltip="Editar" tooltipPosition="top"></a>
+                  <button pButton icon="pi pi-trash"pTooltip="Excluir" tooltipPosition="top"></button>
               </td>
             </tr>
           </ng-template>
