--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -29,7 +29,7 @@
               <th>Descrição</th>
               <th class="col-data-header">Vencimento</th>
               <th class="col-data-header">Pagamento</th>
-              <th>Tipo</th>
+              <!--<th>Tipo</th>-->
               <th class="col-valor-header">valor</th>
               <th></th>
             </tr>
@@ -39,10 +39,10 @@
             <tr>
               <td>{{lancamento.pessoa}}</td>
               <td>{{lancamento.descricao}}</td>
-              <td class="col-data-content">{{lancamento.dataVencimento}}</td>
-              <td class="col-data-content">{{lancamento.dataPagamento}}</td>
-              <td class="col-data-content">{{lancamento.tipo}}</td>
-              <td class="col-valor-content" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor}}</td>
+              <td class="col-data-content">{{lancamento.dataVencimento | date:'dd/MM/yyyy'}}</td>
+              <td class="col-data-content">{{lancamento.dataPagamento | date:'dd/MM/yyyy'}}</td>
+              <!--<td class="col-data-content">{{lancamento.tipo}}</td>-->
+              <td class="col-valor-content" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{lancamento.valor | currency:'BRL':true}}</td>
               <td class="col-acoes">
                   <a pButton icon="pi pi-pencil" style="margin: 2px"
                   pTooltip="Editar" tooltipPosition="top"></a>
