--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form action="">
+  <form autocomplete="off" #lancamentoForm="ngForm">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Novo Lançamento</h1>
@@ -11,7 +11,8 @@
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento</label>
-        <p-calendar dateFormat="dd/mm/yy"></p-calendar>
+        <p-calendar dateFormat="dd/mm/yy" name="vencimento" ngModel #vencimento="ngModel" required></p-calendar>
+        <app-message [control]="vencimento" error="required" text="Informe uma data de Venciemnto" ></app-message>
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>{{tipo.value === 'RECEITA'? 'Recebimento': 'Pagamento'}}</label>
@@ -19,27 +20,33 @@
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="descricao"
+        ngModel #descricao="ngModel" required minlength="5">
+
+        <app-message [control]="descricao" error="required"
+        text="Informe uma descrição"></app-message>
+        <app-message [control]="descricao" error="minlength"
+        text="Minimo de {{descricao.errors?.minlength?.requiredLength}} caracteres."></app-message>
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
-        <input pInputText type="text" placeholder="R$ 0,00" currencyMask
-        [options]="{prefix:'R$', thousands:'.', decimal:',', allowNegative: false}">
+        <input pInputText type="text" placeholder="R$ 0,00" currencyMask name="valor"
+        [options]="{prefix:'R$', thousands:'.', decimal:',', allowNegative: false}" ngModel required>
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Categoria</label>
-        <p-dropdown [options]="categorias" placeholder="selecione"></p-dropdown>
+        <p-dropdown [options]="categorias" placeholder="selecione" nome="categoria" ngModel required></p-dropdown>
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Pessoa</label>
-        <p-dropdown [options]="pessoas"  placeholder="selecione" [filter]="true"></p-dropdown>
+        <p-dropdown [options]="pessoas"  placeholder="selecione" [filter]="true" name="pessoa" ngModel required></p-dropdown>
       </div>
       <div class="ui-g-12 ui-fluid">
         <label>Observação</label>
         <textarea pInputTextarea type="text" rows="3"></textarea>
       </div>
       <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar"></button>
+        <button pButton type="submit" label="Salvar" [disabled]="!lancamentoForm.valid"></button>
         <button pButton type="button" label="Novo" class="ui-button-info" style="margin: 3px"></button>
         <a href="#">Volta para a pesquisa</a>
       </div>
