--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -1,20 +1,27 @@
 <div class="container">
-  <form action="">
+  <form autocomplete="off" #pessoaForm="ngForm">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Nova Pessoa</h1>
       </div>
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <input type="text" pInputText>
+        <input type="text" pInputText name="nome" ngModel #nome="ngModel" required minlength="5">
+        <app-message [control]="nome" error="required" text="Informe um nome"></app-message>
+        <app-message [control]="nome" error="minlength"
+        text="Minimo de {{nome.errors?.minlength?.requiredLength}} caracteres."></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-9  ui-fluid">
         <label>Lougradouro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="lougradouro" ngModel #lougradouro="ngModel" required >
+        <app-message [control]="lougradouro" error="required" text="Informe o Lougradouro"></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Numero</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="numero" ngModel #numero="ngModel" required>
+        <app-message [control]="numero" error="required" text="Informe o numero" ></app-message>
       </div>
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
@@ -22,22 +29,27 @@
       </div>
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="bairro" ngModel #bairro="ngModel" required>
+        <app-message [control]="bairro" error="required" text="Informe o bairro" ></app-message>
       </div>
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP</label>
-        <input pInputText type="text">
+        <p-inputMask mask="99.999-999" name="cep" ngModel #cep="ngModel" required></p-inputMask>
+        <app-message [control]="cep" error="required" text="Informe o CEP" ></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="cidade" ngModel #cidade="ngModel" required>
+        <app-message [control]="cidade" error="required" text="Informe a cidade"></app-message>
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="estado" ngModel #estado="ngModel" required>
+        <app-message [control]="estado" error="required" text="Informe o estado"></app-message>
       </div>
       <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar"></button>
+        <button pButton type="submit" label="Salvar" [disabled]="!pessoaForm.valid"></button>
         <button pButton type="button" label="Novo" class="ui-button-info" style="margin: 3px"></button>
         <a href="#">Volta para a pesquisa</a>
       </div>
