--- a/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -15,33 +15,7 @@
   </div>
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="pessoas" [paginator]=true [rows]=5 [responsive]="true">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Nome</th>
-            <th>Cidade</th>
-            <th>Estado</th>
-            <th>Status</th>
-            <th></th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-pessoa>
-          <tr>
-            <td>{{pessoa.nome}}</td>
-            <td>{{pessoa.cidade}}</td>
-            <td>{{pessoa.estado}}</td>
-            <td class="col-status"> <a href="javascript:;" [pTooltip]="pessoa.ativo? 'Desativar':'Ativar'"
-              tooltipPosition="top">
-            {{pessoa.ativo ? 'Ativo' :'Inativo'}}
-            </a></td>
-            <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" style="margin: 2px"
-                pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
+      <app-pessoa-grid [pessoas]="pessoas"></app-pessoa-grid>
     </div>
     <div class="ui-g-12">
       <button pButton label="Nova Pessoa"></button>
