--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -24,7 +24,7 @@
         ngModel #descricao="ngModel" required minlength="5">
 
         <app-message [control]="descricao" error="required"
-        text="Informe uma descrição"></app-message>
+        text="Informe uma descrição"></app-message>-->
         <app-message [control]="descricao" error="minlength"
         text="Minimo de {{descricao.errors?.minlength?.requiredLength}} caracteres."></app-message>
       </div>
